ansible/charts/app/charts/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
      - name: example-app
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
