ansible/charts/app/charts/service.yml
apiVersion: v1
kind: Service
metadata:
  name: example-app
spec:
  type: ClusterIP
  selector:
    app: example-app
  ports:
    - port: 80
      targetPort: 8080
